feat: add watchlist form and item display
- Added WatchlistForm component with title, type, status, and season inputs
- Conditionally shows season fields only for TV shows
- Displays success message on submit and disables button while submitting
- Refactored WatchlistItems to show newest entries first with date stamps
- Added refresh mechanism to reload items after new entry

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -39,3 +39,16 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# SQLite (for local dev only)
+dev.db
+dev.db-journal
+/prisma/migrations/
+
+# node_modules in nested folders
+**/node_modules
+
+# Optional editor + OS files
+.vscode/
+.DS_Store
+Thumbs.db
