--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "framer-motion": "^12.9.7",
     "next": "15.3.1",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
