--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.7.0",
+    "autoprefixer": "^10.4.21",
     "framer-motion": "^12.9.7",
     "next": "15.3.1",
+    "postcss": "^8.5.3",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -24,7 +27,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.6",
     "typescript": "^5"
   }
 }
