--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma migrate deploy --debug --schema=./prisma/schema.prisma && next build",
+    "build": "prisma generate && prisma migrate deploy --schema=./prisma/schema.prisma && next build",
     "start": "next start",
     "lint": "next lint"
   },
