--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "postcss": "^8.5.3",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tmdb-ts": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
