--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tmdb-ts": "^2.0.1"
+    "tmdb-ts": "^2.0.1",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
