--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "tmdb-ts": "^2.0.1",
     "usehooks-ts": "^3.1.1"
   },
