fix(ui): ensure only one global floating add (+) button, improve FAB style and position
- Removed all duplicate and mobile-only add buttons from page.tsx
- Ensured FAB is rendered only once in WatchlistItems.tsx
- Updated FAB to use a modern, centered SVG plus icon
- Moved FAB higher on the screen for better mobile UX
- Cleaned up legacy add button code

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-hot-toast": "^2.5.2",
     "tmdb-ts": "^2.0.1",
     "usehooks-ts": "^3.1.1"
   },
