--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,50 @@
-    # macOS
-    .DS_Store
-    ._*
-    .Spotlight-V100
-    .Trashes
-    ehthumbs.db
-    Thumbs.db
+# macOS
+.DS_Store
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-    # Node
-    node_modules/
-    npm-debug.log*
-    yarn-debug.log*
-    yarn-error.log*
-    package-lock.json # Depending on your team's policy, you might commit this
-    yarn.lock         # Depending on your team's policy, you might commit this
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json # Depending on your team's policy, you might commit this
+yarn.lock         # Depending on your team's policy, you might commit this
 
-    # Build output
-    .next/
-    out/
-    build/
+# Build output
+.next/
+out/
+build/
 
-    # Environment variables
-    .env
-    .env.local
-    .env.development.local
-    .env.test.local
-    .env.production.local
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-    # Prisma
-    # If you use Prisma Migrate, you should commit the migrations folder,
-    # but you might want to ignore the auto-generated client if it's large
-    # or regenerated frequently in different environments.
-    # node_modules/.prisma/client/ # Typically handled by node_modules/
+# Prisma
+# If you use Prisma Migrate, you should commit the migrations folder,
+# but you might want to ignore the auto-generated client if it's large
+# or regenerated frequently in different environments.
+# node_modules/.prisma/client/ # Typically handled by node_modules/
 
-    # IDE / Editor specific
-    .vscode/
-    .idea/
-    *.suo
-    *.ntvs*
-    *.njsproj
-    *.sln
-    *.sw?
+# IDE / Editor specific
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-    # Logs
-    logs
-    *.log
+# Logs
+logs
+*.log
 
-    # Project notes and todo lists
-    FEATURES.md
+# Project notes and todo lists
+FEATURES.md
+../FEATURES.md
